--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,7 +1,6 @@
+
+@import "~font-awesome/scss/font-awesome";
 @import "bourbon/bourbon";
-@import "neat/neat";
 @import "base/base";
-
 @import "template";
-
 @import "pages/planets";
