--- a/resources/sass/template/_main-menu.scss
+++ b/resources/sass/template/_main-menu.scss
@@ -2,11 +2,23 @@ nav.main-menu {
     @include font-heading;
 
     background: $background;
-    border-bottom: 1px solid $blue;
+    border-style: solid;
+    border-width: 0;
+    border-image:
+        repeating-linear-gradient(
+            -45deg,
+            $blue,
+            $blue 5px,
+            $white 5px,
+            $white 10px
+        ) 10;
+    border-bottom-width: 5px;
     display: flex;
     align-items: stretch;
     justify-content: space-between;
     padding: 0 $base-spacing;
+    position: fixed;
+    width: 100vw;
 
     ul {
         display: flex;
