--- a/resources/sass/pages/_planets.scss
+++ b/resources/sass/pages/_planets.scss
@@ -1,22 +1,3 @@
-.planets-menu {
-    max-width: 180px;
-    height: 100%;
-    max-height: 100%;
-    display: flex;
-    flex-direction: row;
-    background: black;
-    overflow: scroll;
-    border-right: 1px solid $blue;
-
-    .planet {
-        text-align: center;
-        font-size: 0.8em;
-        padding: $base-spacing/2 $base-spacing;
-    }
-
-    img {
-        display: block;
-        width: 80px;
-        height: auto;
-    }
-}
+/**
+ * Planets
+ */
