--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,13 +13,13 @@
 @import "mixins";
 @import "helpers";
 
-// Template styles
-@import "template/shared";
-@import "template/main-menu";
-@import "template/planets-menu";
-
 // Components
 @import "components/border-box";
 
-// Page styles
-@import "pages/planets";
+// Template styles
+@import "template/shared";
+@import "template/main-menu";
+
+// Planets styles
+@import "planets/menu";
+@import "planets/planet";
