--- a/resources/sass/planets/_menu.scss
+++ b/resources/sass/planets/_menu.scss
@@ -1,12 +1,12 @@
 .planets-menu {
-    width: 200px;
+    width: 100px;
     height: 100%;
     max-height: 100%;
     display: flex;
     flex-direction: row;
     background: $background;
     overflow: scroll;
-    padding-top: $base-spacing * 2;
+    padding-top: $base-spacing;
     justify-content: center;
 
     @include border(right, 2);
@@ -20,6 +20,6 @@
     img {
         display: block;
         width: 100px;
-        height: 100px;
+        height: auto;
     }
 }
