--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -56,5 +56,5 @@ $card-header-padding: $base-spacing;
 //$card-content-padding: 1.5rem !default
 //
 //$card-footer-background-color: transparent !default
-//$card-footer-border-top: 1px solid $border !default
+$card-footer-border-top: 1px solid none;
 $card-footer-padding: $base-spacing;
