--- a/resources/sass/components/_border-box.scss
+++ b/resources/sass/components/_border-box.scss
@@ -1,7 +1,10 @@
 .card {
-    @include border;
+    border-radius: 5px;
+    border: 1px solid $yellow;
 
     .card-header {
+        background: $yellow;
+
         h2 {
             margin: 0;
         }
