--- a/resources/sass/template/_shared.scss
+++ b/resources/sass/template/_shared.scss
@@ -24,7 +24,7 @@ body {
 }
 
 a {
-    color: $blue;
+    color: $yellow;
 
     &:hover {
         background-color: $white;
@@ -43,8 +43,8 @@ h3 {
 }
 
 h1 {
-    font-size: 2rem;
-    padding-top: 5px;
+    font-size: 1.5rem;
+    padding: 10px 0;
 }
 
 h2 {
@@ -58,7 +58,8 @@ h3 {
 }
 
 .content {
-    padding: $base-spacing * 2;
+    margin-top: 6px;
+    padding: $base-spacing * 1.5 * 2;
     flex-grow: 1;
 }
 
@@ -133,7 +134,7 @@ table.striped {
 }
 
 path.button {
-    fill: $blue;
+    fill: $yellow;
 
     &:hover {
         fill: #fff;
