--- a/resources/sass/planets/_menu.scss
+++ b/resources/sass/planets/_menu.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .planets-menu {
     min-width: 150px;
     height: 100%;
@@ -13,7 +15,7 @@
     .planet {
         text-align: center;
         font-size: 0.8em;
-        padding: $base-spacing/2 $base-spacing;
+        padding: math.div($base-spacing, 2) $base-spacing;
     }
 
     img {
